# constant/url.go
@@ -1,0 +1,9 @@
+package constant
+
+const PrivateUrl = "/private"
+const InternalUrl = "/internal"
+const Ver1Url = "/v1"
+
+const UsersUrl = "/users"
+const UserUrl = "/user"
+const UserIdUrl = "/user/:id"
