# main.go
@@ -4,6 +4,7 @@ import (
 	"github.com/gin-gonic/gin"
 	swaggerfiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
+	"github.com/zeralux/gin/constant"
 	controllerV1 "github.com/zeralux/gin/controller/v1"
 	docs "github.com/zeralux/gin/docs"
 )
@@ -16,40 +17,28 @@ func main() {
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 
 	// 對外API, GateWay不檢查token
-	commonApi := router.Group("/")
+	ver1Url := router.Group(constant.Ver1Url)
 	{
-		v1 := commonApi.Group("/v1")
-		{
-			user := v1.Group("/users")
-			{
-				user.GET("", controllerV1.GetUsers)
-			}
-		}
+		ver1Url.GET(constant.UsersUrl, controllerV1.GetUsers)
 	}
 
 	// 對外API, GateWay檢查token
-	publicApi := router.Group("/private")
+	privateUrl := router.Group(constant.PrivateUrl)
 	{
-		v1 := publicApi.Group("/v1")
+		ver1Url := privateUrl.Group(constant.Ver1Url)
 		{
-			user := v1.Group("/user")
-			{
-				user.GET("/:id", controllerV1.GetUser)
-			}
+			ver1Url.GET(constant.UserIdUrl, controllerV1.GetUser)
 		}
 	}
 
 	// 對內API, 內網即可調用
-	internalApi := router.Group("/internal")
+	internalUrl := router.Group(constant.InternalUrl)
 	{
-		v1 := internalApi.Group("/v1")
+		ver1Url := internalUrl.Group(constant.Ver1Url)
 		{
-			user := v1.Group("/user")
-			{
-				user.POST("", controllerV1.InsertUser)
-				user.PATCH("/:id", controllerV1.UpdateUser)
-				user.DELETE("/:id", controllerV1.DeleteUser)
-			}
+			ver1Url.POST(constant.UserUrl, controllerV1.InsertUser)
+			ver1Url.PATCH(constant.UserIdUrl, controllerV1.UpdateUser)
+			ver1Url.DELETE(constant.UserIdUrl, controllerV1.DeleteUser)
 		}
 	}
 
